--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   movies:
-    image: viswanathkasi/moves:latest
+    image: viswanathkasi/movies:latest
     ports:
       - "8081:80"
     deploy:
