--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
 		<name>Maven.org</name>
 		<url>http://repo1.maven.org/maven2</url>
 	    </pluginRepository>
+		<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>3.3.2</version> 
+        </plugin>
 	</pluginRepositories>
 
 	
